simple settings activity and changelog

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -31,5 +31,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.SettingsActivity"/>
+
     </application>
 </manifest>
