--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,21 @@ allprojects {
 apply plugin: 'android'
 apply plugin: 'android-test'
 
+androidTest {
+    include '**/*Test.class'
+}
+
 android {
+
     packagingOptions {
         exclude 'LICENSE.txt'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/NOTICE'
+        exclude 'META-INF/DEPENDENCIES'
     }
+
     compileSdkVersion 19
     buildToolsVersion "19.1.0"
 
@@ -54,11 +62,6 @@ android {
     }
 }
 
-androidTest {
-    include '**/*Test.class'
-    exclude '**/espresso/**/*.class'
-}
-
 dependencies {
     repositories {
         mavenCentral()
@@ -66,8 +69,6 @@ dependencies {
             url 'https://oss.sonatype.org/content/repositories/snapshots/'
         }
     }
-    // Espresso
-    androidTestCompile files('lib/espresso-1.1.jar', 'lib/testrunner-1.1.jar', 'lib/testrunner-runtime-1.1.jar')
     androidTestCompile 'com.google.guava:guava:14.0.1',
             'com.squareup.dagger:dagger:1.1.0',
             'org.hamcrest:hamcrest-integration:1.1',
@@ -97,15 +98,15 @@ dependencies {
         exclude module: 'wagon-provider-api'
     }
     androidTestCompile 'com.squareup:fest-android:1.0.+'
+    compile 'org.mockito:mockito-all:+'
 
     compile 'com.android.support:support-v13:+'
-    compile files('lib/google-play-crawler.jar')
 }
 
 apply plugin: 'idea'
 
 idea {
     module {
-        testOutputDir = file('build/test-classes/debug')
+        testOutputDir = file('build/test-classes')
     }
 }
