--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
-        versionName "0.0.1"
+        versionName "0.0.2"
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
 
@@ -101,6 +101,7 @@ dependencies {
     compile 'org.mockito:mockito-all:+'
 
     compile 'com.android.support:support-v13:+'
+    compile files('lib/googleplayapi.jar', 'lib/protobuf-java-2.3.0.jar')
 }
 
 apply plugin: 'idea'
