comment code and update tests

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ android {
         exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/DEPENDENCIES'
+        exclude 'mockito-extensions/org.mockito.plugins.MockMaker'
     }
 
     compileSdkVersion 19
@@ -99,6 +100,10 @@ dependencies {
     }
     androidTestCompile 'com.squareup:fest-android:1.0.+'
     compile 'org.mockito:mockito-all:+'
+    compile ('org.powermock:powermock-mockito-release-full:+') {
+        exclude module: 'hamcrest-core'
+        exclude module: 'objenesis'
+    }
 
     compile 'com.android.support:support-v13:+'
     compile files('lib/googleplayapi.jar', 'lib/protobuf-java-2.3.0.jar')
