boilerplate work for clicking on a theme in the list and showing a new fragment, whether that be on a phone or tablet

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.ThemeActivity" />
         <activity android:name=".activity.SettingsActivity" />
 
     </application>
