--- a/build.gradle
+++ b/build.gradle
@@ -5,21 +5,24 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.10.+'
-        classpath 'org.robolectric.gradle:gradle-android-test-plugin:0.10.+'
+        classpath 'com.android.tools.build:gradle:0.11.+'
+        classpath 'org.robolectric:robolectric-gradle-plugin:0.11.+'
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        }
     }
 }
 
 apply plugin: 'android'
-apply plugin: 'android-test'
+apply plugin: 'robolectric'
 
-androidTest {
+robolectric {
     include '**/*Test.class'
 }
 
@@ -35,12 +38,12 @@ android {
         exclude 'mockito-extensions/org.mockito.plugins.MockMaker'
     }
 
-    compileSdkVersion 20
+    compileSdkVersion 'android-L'
     buildToolsVersion "20.0.0"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 20
+        targetSdkVersion 'L'
         versionCode 1
         versionName "0.4.0"
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
@@ -64,12 +67,6 @@ android {
 }
 
 dependencies {
-    repositories {
-        mavenCentral()
-        maven {
-            url 'https://oss.sonatype.org/content/repositories/snapshots/'
-        }
-    }
     androidTestCompile 'com.google.guava:guava:14.0.1',
             'com.squareup.dagger:dagger:1.1.0',
             'org.hamcrest:hamcrest-integration:1.1',
@@ -105,7 +102,7 @@ dependencies {
         exclude module: 'objenesis'
     }
 
-    compile 'com.android.support:support-v13:20.0.0'
+    compile 'com.android.support:support-v13:+'
     compile files('lib/googleplayapi.jar', 'lib/protobuf-java-2.3.0.jar')
 }
 
