--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,9 @@ android {
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 'L'
+        targetSdkVersion 19
         versionCode 1
-        versionName "0.4.0"
+        versionName "0.6.0"
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
 
