--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -26,20 +26,25 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:allowBackup="true"
-                 android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:theme="@style/Theme"
                  android:name=".SpotlightApplication">
 
-        <activity android:name=".activity.SpotlightActivity">
+        <activity android:name=".activity.SpotlightActivity"
+                  android:label="@string/app_name"
+                  android:icon="@mipmap/ic_launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.ThemeActivity" />
-        <activity android:name=".activity.SettingsActivity" />
+        <activity android:name=".activity.ThemeActivity"
+                  android:icon="@drawable/spotlight_logo"/>
+
+        <activity android:name=".activity.SettingsActivity"
+                  android:icon="@drawable/spotlight_logo"
+                  android:label="@string/app_name" />
 
     </application>
 </manifest>
