--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         </activity>
 
         <activity android:name=".activity.ThemeActivity"
+                  android:label="@string/app_name"
                   android:icon="@drawable/spotlight_logo"/>
 
         <activity android:name=".activity.SettingsActivity"
