--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
     <application android:allowBackup="true"
                  android:icon="@mipmap/ic_launcher"
                  android:theme="@style/Theme"
+                 android:label="@string/app_name"
                  android:name=".SpotlightApplication">
 
         <activity android:name=".activity.SpotlightActivity"
@@ -40,12 +41,10 @@
         </activity>
 
         <activity android:name=".activity.ThemeActivity"
-                  android:label="@string/app_name"
                   android:icon="@drawable/spotlight_logo"/>
 
         <activity android:name=".activity.SettingsActivity"
-                  android:icon="@drawable/spotlight_logo"
-                  android:label="@string/app_name" />
+                  android:icon="@drawable/spotlight_logo" />
 
     </application>
 </manifest>
