--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ android {
     buildToolsVersion '20'
 
     defaultConfig {
+        applicationId 'com.klinker.android.theme_spotlight'
         minSdkVersion 14
         targetSdkVersion 20
         versionCode 1
@@ -102,9 +103,9 @@ dependencies {
         exclude module: 'objenesis'
     }
 
-    compile 'com.android.support:support-v13:20.0.0'
-//    compile "com.android.support:cardview-v7:+"
-//    compile "com.android.support:recyclerview-v7:+"
+    compile 'com.android.support:support-v13:+'
+    compile "com.android.support:cardview-v7:+"
+    compile "com.android.support:recyclerview-v7:+"
     compile files('lib/googleplayapi.jar', 'lib/protobuf-java-2.3.0.jar')
 }
 
