Create featured themer activity to display any themers themes. As a nice side effect, themers from the play store and their themes work correctly with zero extra work on my part. Guess you can chalk that up to my killer programming skills and sensational testing.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -44,10 +44,13 @@
         </activity>
 
         <activity android:name=".activity.ThemeActivity"
-                  android:icon="@drawable/spotlight_logo"/>
+                  android:icon="@android:color/transparent"/>
+
+        <activity android:name=".activity.FeaturedThemerActivity"
+                  android:icon="@android:color/transparent"/>
 
         <activity android:name=".activity.SettingsActivity"
-                  android:icon="@drawable/spotlight_logo" />
+                  android:icon="@android:color/transparent" />
 
     </application>
 </manifest>
