--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
                  android:icon="@mipmap/ic_launcher"
                  android:theme="@style/Theme"
                  android:label="@string/app_name"
-                 android:name=".SpotlightApplication">
+                 android:name=".SpotlightApplication"
+                 android:hardwareAccelerated="true">
 
         <activity android:name=".activity.SpotlightActivity"
                   android:label="@string/app_name"
