add a photo viewer when clicking on a screenshot

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -54,7 +54,10 @@
                   android:icon="@android:color/transparent"/>
 
         <activity android:name=".activity.SettingsActivity"
-                  android:icon="@android:color/transparent" />
+                  android:icon="@android:color/transparent"/>
+
+        <activity android:name=".activity.ScreenshotViewerActivity"
+                  android:theme="@style/ScreenshotViewer"/>
 
     </application>
 </manifest>
