--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
 allprojects {
     repositories {
         mavenCentral()
-        maven {
-            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        flatDir {
+            dirs 'lib'
         }
     }
 }
@@ -103,6 +103,8 @@ dependencies {
     compile "com.android.support:cardview-v7:+"
     compile "com.android.support:recyclerview-v7:+"
     compile files('lib/googleplayapi.jar', 'lib/protobuf-java-2.3.0.jar', 'lib/gridlayoutmanager.jar')
+    compile(name:'android-photoview', ext:'aar')
+
 }
 
 apply plugin: 'idea'
