changes necessary for publishing to play store

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -46,16 +46,16 @@
         </activity>
 
         <activity android:name=".activity.ThemeActivity"
-                  android:icon="@android:color/transparent"/>
+                  android:icon="@drawable/transparent"/>
 
         <activity android:name=".activity.FeaturedThemeActivity"
-                  android:icon="@android:color/transparent"/>
+                  android:icon="@drawable/transparent"/>
 
         <activity android:name=".activity.FeaturedThemerActivity"
-                  android:icon="@android:color/transparent"/>
+                  android:icon="@drawable/transparent"/>
 
         <activity android:name=".activity.SettingsActivity"
-                  android:icon="@android:color/transparent"/>
+                  android:icon="@drawable/transparent"/>
 
         <activity android:name=".activity.ScreenshotViewerActivity"
                   android:theme="@style/ScreenshotViewer"/>
