add an activity to give information to first time users about the auth we are about to perform

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -60,5 +60,8 @@
         <activity android:name=".activity.ScreenshotViewerActivity"
                   android:theme="@style/ScreenshotViewer"/>
 
+        <activity android:name=".activity.AboutAuthActivity"
+                  android:icon="@drawable/spotlight_logo"/>
+
     </application>
 </manifest>
